// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`elyButton > renders with custom props and slot content 1`] = `
"<button class=\\"border font-light uppercase tracking-wider transition-all duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-opacity-50 border-transparent bg-aquamarine-700 text-white focus:ring-aquamarine-600 hover:bg-aquamarine-600 hover:text-white text-base px-6 py-3 cursor-not-allowed opacity-50\\" disabled=\\"\\" type=\\"submit\\"><span class=\\"\\"><!--v-if--><!--v-if--><span><span>Click me</span></span>
  <!--v-if--></span>
</button>"
`;

exports[`elyButton > renders with default props 1`] = `
"<button class=\\"border font-light uppercase tracking-wider transition-all duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-opacity-50 border-transparent bg-koromiko-700 text-white focus:ring-koromiko-600 hover:bg-koromiko-600 hover:text-white text-sm px-4 py-2\\" type=\\"button\\"><span class=\\"space-x-2\\"><!--v-if--><!--v-if--><span></span>
  <!--v-if--></span>
</button>"
`;
